08: fix overflowing text with additional media queries

--- a/08-css-responsive-design/style.css
+++ b/08-css-responsive-design/style.css
@@ -17,11 +17,11 @@ h1 {
 footer {
   text-align: right;
   color: midnightblue;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .card {
-  width: 40%;
+  width: 50%;
 }
 
 .right {
@@ -35,19 +35,35 @@ footer {
 .tile-image {
   height: 200px;
   float: left;
-  margin: 25px 20px 20px 20px;
-  display: inline;
 }
 
 .creative {
   color: midnightblue;
 }
 
-p {
-  overflow: hidden;
+@media (min-width: 1200px) {
+  .right {
+    position: relative;
+    left: 15px;
+  }
+
+  .tile-image {
+    margin: 25px 20px 15px 0;
+  }
 }
 
-@media (max-width: 680px) {
+@media (max-width: 1200px) and (min-width: 700px) {
+  .tile-image {
+    float: none;
+    display: inline-block;
+  }
+
+  .card-text {
+    max-width: 325px;
+  }
+}
+
+@media (max-width: 700px) {
   .logo {
     width: 100px;
   }
@@ -56,7 +72,7 @@ p {
     width: 100%;
     text-align: justify;
     display: block;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   h1 {
@@ -66,7 +82,7 @@ p {
 
   .tile-image {
     height: 100px;
-    margin: 10px 10px 10px 10px;
+    margin: 25px 0 25px 0;
   }
 
   .card img {
